security improvements to backend controllers & UI improvements in landing/signup